<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickMSG</string>
    <string name="status_unread">Unread messages: </string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="title_activity_list">QuickMSG</string>
    <string name="action_my_fingerprint">My fingerprint</string>
    <string name="action_add_contact">Add contact</string>
    <string name="dialog_add_contact">Enter contact email address. Your contact will be asked to verify your public key.</string>
    <string name="action_send_key">Send public key</string>
    <string name="dialog_send_key">Send my public key to this contact.</string>
    <string name="dialog_contact">Contact</string>
    <string name="action_message">QuickMSG</string>
    <string name="action_verify">Verify contact</string>
    <string name="action_sync">Sync mail</string>
    <string name="dialog_verify">Press OK to verify the public key of this contact</string>
    <string name="action_fingerprint">Fingerprint</string>
    <string name="dialog_fingerprint">Fingerprint of contact </string>
    <string name="action_warn_settings">Configuration needed</string>
    <string name="dialog_warn_settings">
        	Select any of the known services and fill in the fields.
        	Press Cancel if you wish to manually configure an email account.
    </string>
    <string name="dialog_gmail_address">mail address</string>
    <string name="dialog_gmail_pass">mail password</string>
    <string name="action_remove">Remove contact</string>
    <string name="dialog_remove">Do you want to remove the contact</string>
    <string name="dialog_remove_self">Can not remove self from contacts</string>
    <string name="action_remove_self">Can not remove</string>
    <string name="title_activity_main">QuickMSG</string>
    <string name="action_add_group">Add group</string>
    <string name="dialog_add_group">Enter group name. A new group will be created.</string>
    <string name="action_set_member">Set members</string>
    <string name="action_set_name">Set group name</string>
    <string name="dialog_group_name">Group name</string>
    <string name="action_group_name">Group name</string>
    <string name="action_select_contact">Select contact</string>
    <string name="action_export">Export</string>
    <string name="dialog_export">
        Export will create an export file with all data and settings.
        This file which will be named \'QuickMSG.export\' can be copied to another device and imported.
        Beware, this file also contains your private key!
    </string>
    <string name="action_import">Import</string>
	<string name="dialog_import">
        Import will load a file called \'QuickMSG.export\'.
        Beware, this will overwrite any current settings and messages!
    </string>
	
    <string name="action_show_license">Show License</string>
    <string name="compose_message">Compose message</string>
    
    <string name="status_connection">Connection status</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
</resources>
