<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item android:id="@+id/action_settings" android:orderInCategory="4" android:showAsAction="never" android:title="@string/action_settings" /><item android:id="@+id/action_my_fingerprint" android:title="@string/action_my_fingerprint" android:orderInCategory="1"></item>
    <item android:id="@+id/action_add_contact" android:title="@string/action_add_contact" android:orderInCategory="2"></item>
    <item android:id="@+id/action_add_group" android:title="@string/action_add_group" android:orderInCategory="3"></item>
    
    <item android:id="@+id/action_show_license" android:title="@string/action_show_license" android:orderInCategory="7"></item>
    <item android:id="@+id/action_export" android:title="@string/action_export" android:orderInCategory="5"></item>
    <item android:id="@+id/action_import" android:title="@string/action_import" android:orderInCategory="6"></item>
    <item android:id="@+id/action_sync" android:title="@string/action_sync" android:orderInCategory="8"></item>
    
    
</menu>
